Fulfills third deliverable until there is only one item in the menu

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     Insert comment here
   </p>
 
+  <!-- Delete Ramen Form -->
+  <form id="delete-ramen">
+    <input type="submit" value="Delete the Featured Ramen" />
+  </form>
+
   <!-- Edit Ramen Form -->
   <form id="edit-ramen">
     <h4>Update the Featured Ramen</h4>
