--- a/index.html
+++ b/index.html
@@ -18,28 +18,32 @@
     <!-- Ramen Images Here -->
   </div>
 
-  <!-- Ramen Details -->
-  <div id="ramen-detail">
-    <img class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
-    <h2 class="name">Insert Name Here</h2>
-    <h3 class="restaurant">Insert Restaurant Here</h3>
+  <!--toggle div-->
+  <div id = "display-toggle", style="display: block">
+      <!-- Ramen Details -->
+    <div id="ramen-detail">
+      <img class="detail-image" src="./assets/image-placeholder.jpg" alt="Insert Name Here" />
+      <h2 class="name">Insert Name Here</h2>
+      <h3 class="restaurant">Insert Restaurant Here</h3>
+    </div>
+
+    <h3>Rating:</h3>
+    <p>
+      <span id='rating-display'>Insert rating here</span> / 10
+    </p>
+    <h3>Comment:</h3>
+    <p id='comment-display'>
+      Insert comment here
+    </p>
   </div>
 
-  <h3>Rating:</h3>
-  <p>
-    <span id='rating-display'>Insert rating here</span> / 10
-  </p>
-  <h3>Comment:</h3>
-  <p id='comment-display'>
-    Insert comment here
-  </p>
-
+  <div id = "display-toggle2", style="display: block">
   <!-- Delete Ramen Form -->
   <form id="delete-ramen">
     <input type="submit" value="Delete the Featured Ramen" />
   </form>
 
-  <!-- Edit Ramen Form -->
+      <!-- Edit Ramen Form -->
   <form id="edit-ramen">
     <h4>Update the Featured Ramen</h4>
     <label for="rating">Rating: </label>
@@ -48,6 +52,7 @@
     <textarea name="new-comment" id="new-comment"></textarea>
     <input type="submit" value="Update" />
   </form>
+</div>
 
   <!-- New Ramen Form -->
   <form id="new-ramen">
